Fix low quality logo.

--- a/_sass/htacg.scss
+++ b/_sass/htacg.scss
@@ -205,5 +205,11 @@ p.note
 		//@include stroke(1px, darkred);
 		color: white;
 	}
+	div
+	{
+	  background-image: url(../images/htacg-logo.svg);
+	  background-repeat: no-repeat;
+	  background-size: auto 35%;
+	}
 }
 
