Use SVG here, too.

--- a/_sass/htacg.scss
+++ b/_sass/htacg.scss
@@ -198,7 +198,7 @@ p.note
 
 .page-lead.home
 {
-	background: limegreen url(../images/green-abstract-background.jpg);
+	background: limegreen url(../images/sun_blast.svg);
 	h1,
 	h2
 	{
