Alternate logo for narrow screens; embed fonts in SVG's

--- a/_sass/htacg.scss
+++ b/_sass/htacg.scss
@@ -213,3 +213,10 @@ p.note
 	}
 }
 
+@media only screen and (max-width: 767px) {
+  .page-lead.home div
+  {
+	  background-image: url(../images/htacg-logo-alt.svg);  
+  }
+}
+
